--- a/index.html
+++ b/index.html
@@ -11,170 +11,85 @@
       --mid:     #bdc3c7;
       --dark:    #34495e;
     }
-    body {
-      margin: 0; padding: 2rem;
-      font-family: Arial, sans-serif;
-      background: var(--light);
-    }
-    .invoice-container {
-      position: relative;
-      max-width: 800px; margin: auto;
-      background: #fff; border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      padding: 2rem;
-      overflow: visible;
-    }
-    /* watermark behind everything */
-    .invoice-container::before {
-      content: "";
-      position: absolute; inset: 0;
-      background:
-        linear-gradient(
-          135deg,
-          rgba(255,153,204,0.1),
-          rgba(153,204,255,0.1)
-        ),
-        url("splashedpaint.jpg") center/cover no-repeat;
-      opacity: 0.15;
-      z-index: 0;
-    }
-    .invoice-container > *, .invoice-container * {
-      position: relative;
-      z-index: 1;
-    }
-    /* hide UI during PDF export */
-    .invoice-container.hide-ui .actions,
-    .invoice-container.hide-ui .add-row,
-    .invoice-container.hide-ui .toolbar {
-      display: none !important;
-    }
-
-    /* header */
-    .invoice-header {
-      display: flex; justify-content: space-between; align-items: center;
-    }
-    .company-left {
-      display: flex; align-items: center;
-    }
-    .logo {
-      height: 120px; margin-right: 1rem;
-    }
-    .company-name {
-      font-size: 1.8rem;
-      color: var(--primary);
-      margin: 0;
-    }
-
-    /* meta & recipient */
-    .invoice-meta {
-      background: var(--mid);
-      color: #fff;
-      padding: 1rem;
-      border-radius: 4px;
-      width: 200px;
-      font-size: 0.9rem;
-    }
-    .meta-row {
-      display: flex; justify-content: space-between;
-      margin-bottom: 0.5rem;
-    }
-    .meta-row input {
-      width: 80px; border: none; border-radius: 2px;
-      padding: 0.2rem;
-    }
-    .meta-total {
-      background: var(--dark);
-      padding: 0.6rem;
-      border-radius: 3px;
-      display: flex; justify-content: space-between;
-      font-weight: bold;
-    }
-    .recipient {
-      margin-top: 2rem;
-      text-transform: uppercase;
-      font-size: 0.9rem;
-    }
-    .recipient input {
-      width: 100%;
-      border: none;
-      border-bottom: 1px solid var(--mid);
-      margin-bottom: 0.5rem;
-      padding: 0.3rem 0;
-    }
-
-    /* table styling for on‑screen only */
-    table {
-      width: 100%;
-      margin-top: 2rem;
-      border-collapse: collapse;
-    }
-    th, td {
-      /* remove all borders & backgrounds */
-      border: none !important;
-      background: transparent !important;
-      padding: 0.5rem 0;
-      line-height: 1.4;
-    }
-    th {
-      font-weight: bold;
-    }
-    td.editable {
-      cursor: text;
-    }
-    td.editable:empty:before {
-      content: attr(data-placeholder);
-      color: #aaa;
-    }
-
-    /* controls */
-    .toolbar {
-      text-align: right;
-      margin-bottom: 1rem;
-    }
+    body { margin:0; padding:2rem; font-family:Arial,sans-serif; background:var(--light); }
+    .toolbar { text-align:right; margin-bottom:1rem; }
     .toolbar button,
     .add-row,
     .actions button {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.6rem 1rem;
-      cursor: pointer;
-      font-size: 0.95rem;
-      margin-top: 0.5rem;
+      background:var(--accent); color:#fff; border:none;
+      border-radius:4px; padding:0.6rem 1rem;
+      cursor:pointer; font-size:0.95rem; margin-top:0.5rem;
     }
     .toolbar button:hover,
     .add-row:hover,
-    .actions button:hover {
-      background: var(--dark);
+    .actions button:hover { background:var(--dark); }
+    .invoice-container {
+      position:relative; max-width:800px; margin:auto;
+      background:#fff; border-radius:8px;
+      box-shadow:0 4px 12px rgba(0,0,0,0.08);
+      padding:2rem; overflow:visible;
     }
-    .actions {
-      margin-top: 2rem;
-      text-align: right;
+    .invoice-container::before {
+      content:""; position:absolute; inset:0;
+      background:
+        linear-gradient(135deg, rgba(255,153,204,0.1), rgba(153,204,255,0.1)),
+        url("splatter.avif") center/cover no-repeat;
+      opacity:0.15; z-index:0;
+    }
+    .invoice-container > *, .invoice-container * { position:relative; z-index:1; }
+    .invoice-container.hide-ui .toolbar,
+    .invoice-container.hide-ui .actions,
+    .invoice-container.hide-ui .add-row { display:none!important; }
+
+    .invoice-header { display:flex; justify-content:space-between; align-items:center; }
+    .company-left { display:flex; align-items:center; }
+    .logo { height:120px; margin-right:1rem; }
+    .company-name { font-size:1.8rem; color:var(--primary); margin:0; }
+
+    .company-info { margin-top:0.4rem; font-size:0.9rem; }
+    .company-info input {
+      display:block; width:250px; border:none;
+      border-bottom:1px solid var(--mid);
+      margin:0.2rem 0; padding:0.2rem 0;
     }
 
-    /* floating text box styling */
+    .invoice-meta {
+      background:var(--mid); color:#fff;
+      padding:1rem; border-radius:4px; width:200px; font-size:0.9rem;
+    }
+    .meta-row { display:flex; justify-content:space-between; margin-bottom:0.5rem; }
+    .meta-row input { width:60px; border:none; border-radius:2px; padding:0.2rem; }
+    .meta-total {
+      background:var(--dark); padding:0.6rem;
+      border-radius:3px; display:flex; justify-content:space-between;
+      font-weight:bold;
+    }
+    .recipient { margin-top:2rem; text-transform:uppercase; font-size:0.9rem; }
+    .recipient input {
+      width:100%; border:none; border-bottom:1px solid var(--mid);
+      margin-bottom:0.5rem; padding:0.3rem 0;
+    }
+
+    table { width:100%; margin-top:2rem; border-collapse:collapse; }
+    th, td {
+      border:none!important; background:transparent!important;
+      padding:0.4rem 0; line-height:1.4;
+    }
+    th { font-weight:bold; }
+    td.editable { cursor:text; }
+    td.editable:empty:before { content:attr(data-placeholder); color:#aaa; }
+
+    .actions { margin-top:2rem; text-align:right; }
+
     .textbox {
-      position: absolute;
-      min-width: 120px;
-      min-height: 30px;
-      padding: 4px 8px;
-      background: rgba(255,255,255,0.8);
-      border: 1px dashed #aaa;
-      cursor: move;
-      overflow: hidden;
+      position:absolute; min-width:120px; min-height:30px;
+      padding:4px 8px; background:rgba(255,255,255,0.8);
+      border:1px dashed #aaa; cursor:move; overflow:hidden;
     }
-    .textbox:focus {
-      outline: 2px solid var(--accent);
-    }
+    .textbox:focus { outline:2px solid var(--accent); }
   </style>
 </head>
 <body>
-  <!-- jsPDF + AutoTable -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
-
-  <!-- Toolbar: Add Text Box -->
   <div class="toolbar">
     <button id="addTextBox">+ Add Text Box</button>
   </div>
@@ -183,7 +98,13 @@
     <header class="invoice-header">
       <div class="company-left">
         <img src="elvisofcolour.jpeg" class="logo" alt="Logo">
-        <h1 class="company-name">Elvis Of Colours</h1>
+        <div>
+          <h1 class="company-name">Elvis Of Colours</h1>
+          <div class="company-info">
+            <input id="companyAddress" placeholder="Your Company Address">
+            <input id="companyPhone"   placeholder="(555) 123‑4567">
+          </div>
+        </div>
       </div>
       <div class="invoice-meta">
         <div class="meta-row"><label>Invoice #</label><input id="invNum" value="0001"></div>
@@ -203,11 +124,11 @@
     <table id="itemsTable">
       <thead>
         <tr>
-          <th style="width:80px;">Service</th>
-          <th style="width:250px;">Description</th>
-          <th style="width:40px;">Qty.</th>
-          <th style="width:60px;">Unit Price</th>
-          <th style="width:60px;">Line Total</th>
+          <th style="width:60px;">Service</th>
+          <th style="width:300px;">Description</th>
+          <th style="width:30px;">Qty.</th>
+          <th style="width:50px;">Unit Price</th>
+          <th style="width:50px;">Line Total</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -220,14 +141,15 @@
     </div>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
   <script>
   (()=>{
     const { jsPDF } = window.jspdf;
+    const invoiceCard = document.getElementById('invoiceCard');
     const tbody       = document.querySelector('#itemsTable tbody');
     const invTotal    = document.getElementById('invTotal');
-    const invoiceCard = document.getElementById('invoiceCard');
 
-    // make an editable <td>
     function makeCell(placeholder){
       const td = document.createElement('td');
       td.className       = 'editable';
@@ -235,8 +157,6 @@
       td.setAttribute('data-placeholder', placeholder);
       return td;
     }
-
-    // add a new row
     document.getElementById('addRow').onclick = () => {
       const tr = document.createElement('tr');
       tr.appendChild(makeCell('Service'));
@@ -248,23 +168,21 @@
       tr.appendChild(tot);
       tbody.appendChild(tr);
     };
-    // seed one row
     document.getElementById('addRow').click();
 
-    // compute totals
     document.getElementById('computeBtn').onclick = () => {
       let sum = 0;
-      tbody.querySelectorAll('tr').forEach(tr => {
-        const qty   = parseFloat(tr.cells[2].textContent) || 0;
-        const price = parseFloat(tr.cells[3].textContent) || 0;
-        const line  = qty * price;
-        tr.cells[4].textContent = '$' + line.toFixed(2);
+      tbody.querySelectorAll('tr').forEach(tr=>{
+        const qty   = parseFloat(tr.cells[2].textContent)||0;
+        const price = parseFloat(tr.cells[3].textContent)||0;
+        const line  = qty*price;
+        tr.cells[4].textContent = '$'+line.toFixed(2);
         sum += line;
       });
-      invTotal.textContent = '$' + sum.toFixed(2);
+      invTotal.textContent = '$'+sum.toFixed(2);
     };
 
-    // floating text box logic
+    // floating text boxes
     document.getElementById('addTextBox').onclick = () => {
       const box = document.createElement('div');
       box.className       = 'textbox';
@@ -276,51 +194,43 @@
       makeDraggable(box);
       box.focus();
     };
-
-    function makeDraggable(el) {
-      let startX, startY, origX, origY;
-      el.onmousedown = e => {
-        if (e.button !== 0) return;
-        startX = e.clientX; startY = e.clientY;
-        const rect = el.getBoundingClientRect();
-        origX = rect.left; origY = rect.top;
-        document.onmousemove = drag;
-        document.onmouseup   = () => document.onmousemove = document.onmouseup = null;
+    function makeDraggable(el){
+      let sX,sY,oX,oY;
+      el.onmousedown = e=>{
+        if(e.button!==0) return;
+        sX=e.clientX; sY=e.clientY;
+        const r=el.getBoundingClientRect();
+        oX=r.left; oY=r.top;
+        document.onmousemove=drag;
+        document.onmouseup=()=>document.onmousemove=document.onmouseup=null;
       };
-      function drag(e) {
-        const dx = e.clientX - startX;
-        const dy = e.clientY - startY;
-        // offset relative to invoiceCard
-        const invRect = invoiceCard.getBoundingClientRect();
-        el.style.left = (origX + dx - invRect.left) + 'px';
-        el.style.top  = (origY + dy - invRect.top)  + 'px';
+      function drag(e){
+        const dx=e.clientX-sX, dy=e.clientY-sY;
+        const ir=invoiceCard.getBoundingClientRect();
+        el.style.left = (oX+dx-ir.left)+'px';
+        el.style.top  = (oY+dy-ir.top )+'px';
       }
     }
 
-    // helper for watermark/logo
     function loadImageDataURL(src, alpha=1){
-      return new Promise((res, rej) => {
-        const img = new Image();
-        img.src = src;
-        img.onload = () => {
-          const c = document.createElement('canvas');
-          c.width = img.width; c.height = img.height;
-          const ctx = c.getContext('2d');
-          if(alpha<1) ctx.globalAlpha = alpha;
+      return new Promise((res,rej)=>{
+        const img=new Image(); img.src=src;
+        img.onload=()=>{
+          const c=document.createElement('canvas');
+          c.width=img.width;c.height=img.height;
+          const ctx=c.getContext('2d');
+          if(alpha<1)ctx.globalAlpha=alpha;
           ctx.drawImage(img,0,0);
           res(c.toDataURL('image/png'));
         };
-        img.onerror = rej;
+        img.onerror=rej;
       });
     }
 
-    // download PDF
-    document.getElementById('downloadBtn').onclick = async () => {
+    document.getElementById('downloadBtn').onclick = async()=>{
       document.getElementById('computeBtn').click();
-
-      // collect table data
-      const body = [];
-      tbody.querySelectorAll('tr').forEach(tr => {
+      const body=[];
+      tbody.querySelectorAll('tr').forEach(tr=>{
         body.push([
           tr.cells[0].textContent.trim(),
           tr.cells[1].textContent.trim(),
@@ -330,69 +240,65 @@
         ]);
       });
 
-      const doc = new jsPDF({ unit:'pt', format:'letter' });
-      const pageW = doc.internal.pageSize.getWidth();
-      const pageH = doc.internal.pageSize.getHeight();
+      const doc=new jsPDF({unit:'pt',format:'letter'});
+      const w=doc.internal.pageSize.getWidth();
+      const h=doc.internal.pageSize.getHeight();
 
       // watermark
-      const wm = await loadImageDataURL('splashedpaint.jpg', 0.15);
-      doc.addImage(wm, 'PNG', 0, 0, pageW, pageH);
+      const wm=await loadImageDataURL('splatter.avif',0.15);
+      doc.addImage(wm,'PNG',0,0,w,h);
 
       // logo
-      const logoData = await loadImageDataURL('elvisofcolour.jpeg');
-      doc.addImage(logoData, 'PNG', 40, 40, 100, 100);
+      const logoImg=await loadImageDataURL('elvisofcolour.jpeg');
+      doc.addImage(logoImg,'PNG',40,40,100,100);
+
+      // company info
+      doc.setFontSize(10)
+         .text(document.getElementById('companyAddress').value, 150, 60)
+         .text(document.getElementById('companyPhone').value, 150, 75);
 
       // header text
       doc.setFontSize(12)
-         .text(`Invoice #: ${document.getElementById('invNum').value}`, 160, 60)
-         .text(`Issued: ${document.getElementById('invDate').value}`, 160, 80)
-         .text(`Due: ${document.getElementById('dueDate').value}`, 160, 100);
+         .text(`Invoice #: ${document.getElementById('invNum').value}`,160,90)
+         .text(`Issued: ${document.getElementById('invDate').value}`,160,110)
+         .text(`Due: ${document.getElementById('dueDate').value}`,160,130);
 
       // recipient
-      let y = 140;
-      doc.setFontSize(14).text('Recipient:', 40, y);
-      y += 18;
-      ['clientName','clientAddress','clientPhone'].forEach(id => {
-        doc.setFontSize(12).text(document.getElementById(id).value, 40, y);
-        y += 16;
-      });
+      let y=160;
+      doc.setFontSize(14).text('Recipient:',40,y);
+      y+=18;
+      ['clientName','clientAddress','clientPhone']
+        .forEach(id=>{doc.setFontSize(12).text(document.getElementById(id).value,40,y); y+=16;});
 
-      // table
+      // items table
       doc.autoTable({
-        startY: y + 10,
-        margin: { left: 40, right: 40 },
-        head: [['Service','Description','Qty','Unit Price','Line Total']],
+        startY: y+10,
+        margin:{left:40,right:40},
+        head:[['Service','Description','Qty','Unit Price','Line Total']],
         body,
-        theme: 'plain',
-        styles: {
-          fontSize: 10,
-          overflow: 'linebreak',
-          cellPadding: 4
-        },
-        columnStyles: {
-          0: { cellWidth: 80 },
-          1: { cellWidth: 250 },
-          2: { cellWidth: 40 },
-          3: { cellWidth: 60 },
-          4: { cellWidth: 60 }
+        theme:'plain',
+        styles:{fontSize:10,overflow:'linebreak',cellPadding:4},
+        columnStyles:{
+          0:{cellWidth:60},
+          1:{cellWidth:300},
+          2:{cellWidth:30},
+          3:{cellWidth:50},
+          4:{cellWidth:50}
         }
       });
 
       // text boxes
-      const boxes = invoiceCard.querySelectorAll('.textbox');
-      for(const box of boxes){
-        const rect = box.getBoundingClientRect();
-        const invRect = invoiceCard.getBoundingClientRect();
-        const x = 40 + (rect.left - invRect.left) * (pageW / invRect.width);
-        const yPos = 40 + (rect.top  - invRect.top ) * (pageH / invRect.height);
-        doc.setFontSize(12)
-           .text(box.textContent.trim(), x, yPos);
-      }
+      invoiceCard.querySelectorAll('.textbox').forEach(box=>{
+        const r=box.getBoundingClientRect(), ir=invoiceCard.getBoundingClientRect();
+        const x=40+(r.left-ir.left)*(w/ir.width);
+        const yPos=40+(r.top-ir.top)*(h/ir.height);
+        doc.setFontSize(12).text(box.textContent.trim(),x,yPos);
+      });
 
-      // grand total
-      const finalY = doc.lastAutoTable.finalY + 20;
+      // total
+      const finalY=doc.lastAutoTable.finalY+20;
       doc.setFontSize(14)
-         .text(`Total: ${invTotal.textContent}`, pageW - 40, finalY, { align: 'right' });
+         .text(`Total: ${invTotal.textContent}`, w-40, finalY, {align:'right'});
 
       doc.save('estimate.pdf');
     };
